<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.myapp.myapplication.MainActivity">

    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clear_all"
        android:text="@string/button_clear"
        android:textAllCaps="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_showlog"
        app:layout_constraintEnd_toStartOf="@+id/button_showlog"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_showlog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:onClick="show_log"
        android:text="@string/button_showlog"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_clear"
        app:layout_constraintTop_toBottomOf="@+id/button_count4" />

    <EditText
        android:id="@+id/plus1"
        style="@style/numberinput"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:inputType="number|numberSigned|numberDecimal"
        android:selectAllOnFocus="true"
        android:text="@string/result_default"
        app:layout_constraintBottom_toTopOf="@+id/minus1"
        app:layout_constraintEnd_toStartOf="@+id/plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/plus2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number|numberSigned|numberDecimal"
        android:selectAllOnFocus="true"
        android:text="@string/result_default"
        app:layout_constraintBottom_toTopOf="@+id/minus2"
        app:layout_constraintEnd_toStartOf="@+id/button_count1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plus"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/plus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/plus_operator"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/minus"
        app:layout_constraintEnd_toStartOf="@+id/plus2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plus1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_count1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:onClick="calculate_plus"
        android:text="@string/count"
        android:textAllCaps="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/plus2"
        app:layout_constraintEnd_toStartOf="@+id/plusvalue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plus2" />

    <Button
        android:id="@+id/button_count2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:onClick="calculate_minus"
        android:text="@string/count"
        android:textAllCaps="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/minus2"
        app:layout_constraintEnd_toStartOf="@+id/minusvalue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minus2" />

    <Button
        android:id="@+id/button_count3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:onClick="calculate_product"
        android:text="@string/count"
        android:textAllCaps="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/product2"
        app:layout_constraintEnd_toStartOf="@+id/productvalue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/product2" />

    <Button
        android:id="@+id/button_count4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:onClick="calculate_division"
        android:text="@string/count"
        android:textAllCaps="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/division2"
        app:layout_constraintEnd_toStartOf="@+id/divisionvalue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/division2" />

    <EditText
        android:id="@+id/minus1"
        style="@style/numberinput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="number|numberSigned|numberDecimal"
        android:selectAllOnFocus="true"
        android:text="@string/result_default"
        app:layout_constraintBottom_toTopOf="@+id/product1"
        app:layout_constraintEnd_toStartOf="@+id/minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plus1" />

    <EditText
        android:id="@+id/minus2"
        style="@style/numberinput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number|numberSigned|numberDecimal"
        android:selectAllOnFocus="true"
        android:text="@string/result_default"
        app:layout_constraintBottom_toTopOf="@+id/product2"
        app:layout_constraintEnd_toStartOf="@+id/button_count2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minus"
        app:layout_constraintTop_toBottomOf="@+id/plus2" />

    <TextView
        android:id="@+id/minus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/minus_operator"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/productoperator"
        app:layout_constraintEnd_toStartOf="@+id/minus2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minus1"
        app:layout_constraintTop_toBottomOf="@+id/plus" />

    <EditText
        android:id="@+id/product1"
        style="@style/numberinput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="number|numberSigned|numberDecimal"
        android:selectAllOnFocus="true"
        android:text="@string/result_default"
        app:layout_constraintBottom_toTopOf="@+id/division1"
        app:layout_constraintEnd_toStartOf="@+id/productoperator"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minus1" />

    <EditText
        android:id="@+id/product2"
        style="@style/numberinput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number|numberSigned|numberDecimal"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:text="@string/result_default"
        app:layout_constraintBottom_toTopOf="@+id/division2"
        app:layout_constraintEnd_toStartOf="@+id/button_count3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/productoperator"
        app:layout_constraintTop_toBottomOf="@+id/minus2" />

    <TextView
        android:id="@+id/plusvalue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/result_default"
        app:layout_constraintBaseline_toBaselineOf="@+id/plus2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_count1" />

    <EditText
        android:id="@+id/division1"
        style="@style/numberinput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="number|numberSigned|numberDecimal"
        android:selectAllOnFocus="true"
        android:text="@string/result_default"
        app:layout_constraintBottom_toTopOf="@+id/button_clear"
        app:layout_constraintEnd_toStartOf="@+id/divisionoperator"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product1" />

    <EditText
        android:id="@+id/division2"
        style="@style/numberinput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number|numberSigned|numberDecimal"
        android:selectAllOnFocus="true"
        android:text="@string/result_default"
        app:layout_constraintBottom_toTopOf="@+id/button_clear"
        app:layout_constraintEnd_toStartOf="@+id/button_count4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/divisionoperator"
        app:layout_constraintTop_toBottomOf="@+id/product2" />

    <TextView
        android:id="@+id/divisionoperator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/division_operator"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button_clear"
        app:layout_constraintEnd_toStartOf="@+id/division2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/division1"
        app:layout_constraintTop_toBottomOf="@+id/productoperator" />

    <TextView
        android:id="@+id/productoperator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/product_operator"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/divisionoperator"
        app:layout_constraintEnd_toStartOf="@+id/product2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/product1"
        app:layout_constraintTop_toBottomOf="@+id/minus" />

    <TextView
        android:id="@+id/minusvalue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/result_default"
        app:layout_constraintBaseline_toBaselineOf="@+id/minus2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_count2" />

    <TextView
        android:id="@+id/productvalue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/result_default"
        app:layout_constraintBaseline_toBaselineOf="@+id/product2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_count3" />

    <TextView
        android:id="@+id/divisionvalue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/result_default"
        app:layout_constraintBaseline_toBaselineOf="@+id/division2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_count4" />

</android.support.constraint.ConstraintLayout>
